@@ -18,6 +18,16 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Properties
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -25,6 +35,26 @@ operator|.
 name|solr
 operator|.
 name|SolrTestCaseJ4
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|AfterClass
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|BeforeClass
 import|;
 end_import
 
@@ -46,17 +76,23 @@ name|TestImplicitCoreProperties
 extends|extends
 name|SolrTestCaseJ4
 block|{
-annotation|@
-name|Test
-DECL|method|testImplicitPropertiesAreSubstitutedInSolrConfig
-specifier|public
-name|void
-name|testImplicitPropertiesAreSubstitutedInSolrConfig
-parameter_list|()
-block|{
+DECL|field|cc
+specifier|private
+specifier|static
 name|CoreContainer
 name|cc
-init|=
+decl_stmt|;
+annotation|@
+name|BeforeClass
+DECL|method|setupContainer
+specifier|public
+specifier|static
+name|void
+name|setupContainer
+parameter_list|()
+block|{
+name|cc
+operator|=
 name|createCoreContainer
 argument_list|(
 literal|"collection1"
@@ -67,8 +103,36 @@ literal|"solrconfig-implicitproperties.xml"
 argument_list|,
 literal|"schema.xml"
 argument_list|)
-decl_stmt|;
-try|try
+expr_stmt|;
+block|}
+annotation|@
+name|AfterClass
+DECL|method|teardownContainer
+specifier|public
+specifier|static
+name|void
+name|teardownContainer
+parameter_list|()
+block|{
+if|if
+condition|(
+name|cc
+operator|!=
+literal|null
+condition|)
+name|cc
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testImplicitPropertiesAreSubstitutedInSolrConfig
+specifier|public
+name|void
+name|testImplicitPropertiesAreSubstitutedInSolrConfig
+parameter_list|()
 block|{
 name|assertQ
 argument_list|(
@@ -90,7 +154,16 @@ argument_list|,
 literal|"//str[@name='dummy5'][.='false']"
 argument_list|)
 expr_stmt|;
-comment|// Test for SOLR-5279 - make sure properties are there on core reload
+block|}
+comment|// SOLR-5279
+annotation|@
+name|Test
+DECL|method|testPropertiesArePersistedAcrossReload
+specifier|public
+name|void
+name|testPropertiesArePersistedAcrossReload
+parameter_list|()
+block|{
 name|cc
 operator|.
 name|reload
@@ -98,15 +171,78 @@ argument_list|(
 literal|"collection1"
 argument_list|)
 expr_stmt|;
-block|}
-finally|finally
-block|{
-name|cc
-operator|.
-name|shutdown
-argument_list|()
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|)
+argument_list|,
+literal|"//str[@name='dummy1'][.='collection1']"
+argument_list|,
+literal|"//str[@name='dummy2'][.='data']"
+argument_list|,
+literal|"//str[@name='dummy3'][.='solrconfig-implicitproperties.xml']"
+argument_list|,
+literal|"//str[@name='dummy4'][.='schema.xml']"
+argument_list|,
+literal|"//str[@name='dummy5'][.='false']"
+argument_list|)
 expr_stmt|;
 block|}
+comment|// SOLR-8712
+annotation|@
+name|Test
+DECL|method|testDefaultProperties
+specifier|public
+name|void
+name|testDefaultProperties
+parameter_list|()
+block|{
+name|Properties
+name|props
+init|=
+name|cc
+operator|.
+name|getCoreDescriptor
+argument_list|(
+literal|"collection1"
+argument_list|)
+operator|.
+name|getSubstitutableProperties
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"collection1"
+argument_list|,
+name|props
+operator|.
+name|getProperty
+argument_list|(
+literal|"solr.core.name"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"solr.core.instanceDir not set correctly"
+argument_list|,
+name|props
+operator|.
+name|getProperty
+argument_list|(
+literal|"solr.core.instanceDir"
+argument_list|)
+operator|.
+name|contains
+argument_list|(
+literal|"collection1"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
